# sotex-box

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  404.html  CODEOWNERS  Cargo.toml  Makefile  README.md  benchmark-EventCoordinator.html  docker-compose.yaml  index.html  mkdocs.yaml  pixi.toml  pyproject.toml  requirements.txt  sitemap.xml  sotex-box.sln  tsconfig.json
.config/: dotnet-tools.json
.github/: pull_request_template.md
.github/workflows/: build-mkdocs.yaml  build-pulumi.yaml  deploy-mkdocs.yaml  dotnet.yaml  flutter-launcher.yaml  pull-request-lint.yaml
android/launcher/: .env.device.json  .template.env.json  flutter_jank_metrics_01.json  pubspec.yaml
android/sotex_box/: README.md  pubspec.yaml
distribution/docker/: backend.dockerfile  e2e.dockerfile  local-pusher.dockerfile
distribution/local/: docker-compose.dev.yaml
docs/: benchmark-EventCoordinator.md  index.md
infra/: Program.cs  Pulumi.yaml
introduction/: deployment.html  development-process.html  hardware-design.html  software-arch.html  system-overview.html
launcher/: .template.env.json  pubspec.yaml
load-tests/: load-test-results-connections.html
observability/: custom-metrics.html  index.html
python/: local-pusher.py  mass-upload-ads.py  test-poll.py
repository/: index.html  working-with-repository.html
search/: search_index.js  search_index.json
web/: dev.Dockerfile  package.json  pnpm-lock.yaml  prod.Dockerfile  tailwind.config.ts  tsconfig.json
web-vite/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
(+231 files in other folders)
