[tool.poetry]
name = "sotex-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-git-committers-plugin-2 = "^2.2.3"
boto3 = "^1.34.63"
flask = "^3.0.2"
urllib3 = "1.26.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
